objects/Role_Program_Perspective__c.object
<CustomObject>
    <description>Each Staff Assignment may relate to zero or many Program Perspectives. Each of these records has its own effective dating, and these records are aggregated into a viewable list on its parent Staff Assignment for presentation on related lists and simple reports.</description>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>Cn{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perspective_Short_Name__c</fullName>
        <formula>Program_Perspective__r.Program_Group__r.Short_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Perspective Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Perspective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Perspective</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Program_Perspective__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Program_Perspective__c</referenceTo>
        <relationshipLabel>Role Program Perspectives</relationshipLabel>
        <relationshipName>Role_Program_Perspectives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Staff_Assignment__c</fullName>
        <label>Staff Assignment</label>
        <referenceTo>Team_Membership__c</referenceTo>
        <relationshipLabel>Role Program Perspectives</relationshipLabel>
        <relationshipName>Role_Program_Perspectives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Role Program Perspective</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Role Program Perspectives</pluralLabel>
    <recordTypes>
        <fullName>Assigned</fullName>
        <active>true</active>
        <label>Assigned</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>The Effective Start date cannot be later than the Effective End date.</description>
        <errorConditionFormula>Effective_Start__c &gt; Effective_End__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be later than the Effective End date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_End_Date</fullName>
        <active>true</active>
        <description>The Effective End cannot be later than the Staff Assignment’s.</description>
        <errorConditionFormula>Effective_End__c &gt; Staff_Assignment__r.End_date__c</errorConditionFormula>
        <errorDisplayField>Effective_End__c</errorDisplayField>
        <errorMessage>The Effective End cannot be later than the Staff Assignment’s.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_Start_Date</fullName>
        <active>true</active>
        <description>The Effective Start cannot be earlier than the Staff Assignment’s.</description>
        <errorConditionFormula>Effective_Start__c  &lt; Staff_Assignment__r.Start_date__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start cannot be earlier than the Staff Assignment’s.</errorMessage>
    </validationRules>
</CustomObject>